--- a/DockerFile
+++ b/DockerFile
@@ -1,21 +1,14 @@
-FROM maven:3.9.6-eclipse-temurin-21-alpine AS build
-WORKDIR /build
-
-COPY pom.xml .
-RUN mvn dependency:go-offline -B
-
-COPY src ./src
-RUN mvn clean package -DskipTests -B
-
-FROM eclipse-temurin:21-jre-alpine
+# ===== BUILD STAGE =====
+FROM maven:3.9.6-eclipse-temurin-21 AS build
 WORKDIR /app
+COPY pom.xml .
+RUN mvn dependency:go-offline
+COPY src ./src
+RUN mvn clean package -DskipTests
 
-RUN addgroup -g 1001 -S appuser && adduser -u 1001 -S appuser -G appuser
-
-COPY --from=build /build/target/gdrop.jar app.jar
-RUN chown appuser:appuser app.jar
-
-USER appuser
+# ===== RUN STAGE =====
+FROM eclipse-temurin:21-jre
+WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8080
-
-ENTRYPOINT ["sh", "-c", "java -Xmx450m -Xms256m -XX:+UseSerialGC -Dserver.port=${PORT:-8080} -jar app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
