update env.properties and add registration component

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=GameDrop
 
 
-spring.config.import=optional:file:env.properties
+spring.config.import=optional:classpath:env.properties
 
 # Database Configuration
 spring.datasource.url=${SPRING_DATASOURCE_URL}
